--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
     "@radix-ui/react-collapsible": "^1.0.1",
+    "@tanstack/react-query": "^4.19.1",
     "@tiptap/extension-document": "^2.0.0-beta.207",
     "@tiptap/extension-highlight": "^2.0.0-beta.207",
     "@tiptap/extension-placeholder": "^2.0.0-beta.207",
@@ -32,6 +33,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.1.20",
     "electron-router-dom": "^1.0.5",
+    "electron-store": "^8.1.0",
     "phosphor-react": "^1.4.1",
     "react-router-dom": "^6.4.5"
   },
@@ -53,6 +55,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "vite-tsconfig-paths": "^4.0.2"
   }
 }
